--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" href="/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
-  </head>
-  <body>
+</head>
+<body>
+    <form name="contact-form-netlify" netlify netlify-honeypot="bot-field" hidden>
+        <input maxlength="35" id="name" type="text" name="name">
+        <input maxlength="40" id="subject" type="text" name="subject">
+        <input id="message" type="textarea" name="" maxlength="250"/>
+    </form>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
-  </body>
+</body>
 </html>
